--- a/src/app/components/startScreen/startScreen.html
+++ b/src/app/components/startScreen/startScreen.html
@@ -4,7 +4,7 @@
 
     <div class="btn-group-vertical">
       <button class="btn btn-primary" ng-click="startScreen.newGame()">New Game</button>
-      <button class="btn btn-primary disabled"">New Game+</button>
+      <button class="btn btn-primary disabled">New Game+</button>
       <button class="btn btn-primary disabled">Continue</button>
       <button class="btn btn-primary">Options</button>
     </div>
