--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -67,6 +67,27 @@
   overflow: scroll;
 }
 
+.middle-fight-bar {
+  position: fixed;
+  top: 22%;
+  left: 0;
+  right: 0;
+}
+
+.fight-queue {
+  border: 3px solid gray;
+  border-radius: 10px;
+  padding: 0 15px;
+}
+
+.fight-log {
+  border: 3px solid gray;
+  border-radius: 10px;
+  padding: 15px;
+  overflow: scroll;
+  height: 212px;
+}
+
 .card {
   display: inline-block;
   border-radius: 10px;
@@ -131,31 +152,8 @@
   display: inline-block;
 }
 
-.center-fight-display {
-  height: 200px;
-}
 
-.fight-queue {
-  border: 3px solid gray;
-  border-radius: 10px;
-  position: fixed;
-  top: 22%;
-  padding: 0 15px;
-  left: 10px;
-  width: 30%;
-}
 
-.fight-log {
-  border: 3px solid gray;
-  border-radius: 10px;
-  position: fixed;
-  top: 22%;
-  padding: 15px;
-  overflow: scroll;
-  right: 20px;
-  width: 65%;
-  height: 212px;
-}
 
 .icon-btn {
   width: 6em;
