--- a/src/app/components/characterSelect/characterSelect.html
+++ b/src/app/components/characterSelect/characterSelect.html
@@ -1,7 +1,7 @@
 <h1 class="text-center">Select a class for {{ characterSelect.newAlly.name }}</h1>
 <div class="text-center row">
   <div ng-repeat="build in characterSelect.newAlly.builds"
-       class="card class-card"
+       class="card class-card target"
        ng-click="characterSelect.makeActiveSelection(build)"
        ng-class="{'active-card' : characterSelect.activeSelection === build}">
     <h3 class="text-center">{{ build.name }}</h3>
