--- a/src/app/components/enemiesFightDisplay/enemiesFightDisplay.html
+++ b/src/app/components/enemiesFightDisplay/enemiesFightDisplay.html
@@ -4,7 +4,7 @@
          ng-style="{width: enemiesFightDisplay.cardWidth}"
          ng-repeat="enemy in enemiesFightDisplay.enemies"
          ng-if="enemy.status === 'alive'"
-         ng-class="{'border-pulse' : enemy.id === fight.queuePool[0].id}"
+         ng-class="{'border-pulse' : enemy.id === fight.queuePool[0].id, 'target' : enemiesFightDisplay.enemiesService.targetSelectMode > 0}"
          ng-click="enemiesFightDisplay.allyAttackEnemy(enemy)">
       <h5>{{ enemy.name }}</h5>
       <div class="progress">
