--- a/src/app/components/alliesFightDisplay/alliesFightDisplay.html
+++ b/src/app/components/alliesFightDisplay/alliesFightDisplay.html
@@ -1,3 +1,4 @@
+<div class="allies-fight-display">
 <div class="container">
     <div class="fight-bar allies-fight-bar">
         <div class="card fight-card"
@@ -14,7 +15,11 @@
               </div>
             </div>
 
-            <h6 class="text-center">Lv. {{ ally.level }} {{ ally.class }} &nbsp; | &nbsp; Stance: {{ ally.stance }}</h6>
+            <div class="text-center">
+              <span style="font-size: 80%;">
+                Lv. {{ ally.level }} {{ ally.class }} &nbsp; | &nbsp; Stance: {{ ally.stance}}
+              </span>
+            </div>
 
             <div class="progress">
                 <div class="progress-bar progress-bar-success"
@@ -54,17 +59,15 @@
             </div>-->
           <!--This may still be useful when the list of moves is too long-->
 
-          <div class="text-center">
-            <div class="btn-group">
-              <button ng-repeat="move in ally.moves"
-                      class="btn btn-default"
-                      ng-class="{'disabled' : (ally.id !== fight.queuePool[0].id || ally.status !== 'alive' || alliesFightDisplay.movesService.selectedMove.length > 0)}"
-                      ng-if="ally.level >= move[1]"
-                      ng-click="alliesFightDisplay.selectMove(move)">{{ move[0] }}</button>
-            </div>
+          <div class="btn-group move-btn-group text-center">
+            <button ng-repeat="move in ally.moves"
+                    class="btn btn-default move-btn"
+                    ng-class="{'disabled' : (ally.id !== fight.queuePool[0].id || ally.status !== 'alive' || alliesFightDisplay.movesService.selectedMove.length > 0)}"
+                    ng-if="ally.level >= move[1]"
+                    ng-click="alliesFightDisplay.selectMove(move)">{{ move[0] }}</button>
           </div>
-
         </div>
     </div>
+</div>
 </div>
 
