--- a/src/app/components/characterSelect/characterSelect.html
+++ b/src/app/components/characterSelect/characterSelect.html
@@ -24,7 +24,7 @@
       </ul>
     <h4 class="text-center">Moves</h4>
       <ul>
-        <li ng-repeat="move in build.moves">{{ move[0] }}</li>
+        <li ng-repeat="move in build.moves">{{ move.name }}</li>
         <!--TODO these should be followed by a description of the move. -->
       </ul>
   </div>
