--- a/src/app/components/enemiesFightDisplay/enemiesFightDisplay.html
+++ b/src/app/components/enemiesFightDisplay/enemiesFightDisplay.html
@@ -1,17 +1,21 @@
-<div class="container">
-  <div class="fight-bar enemies-fight-bar">
-    <div class="card fight-card"
-         ng-style="{width: enemiesFightDisplay.enemiesService.cardWidth}"
-         ng-repeat="enemy in enemiesFightDisplay.enemies"
-         ng-if="enemy.status === 'alive'"
-         ng-class="{'border-pulse' : enemy.id === fight.queuePool[0].id, 'target' : enemiesFightDisplay.enemiesService.targetSelectMode > 0}"
-         ng-click="enemiesFightDisplay.clickEnemy(enemy)">
-      <h5>{{ enemy.name }}</h5>
-      <uib-progressbar max="enemy.stats.maxHealth"
-                       value="enemy.stats.health"
-                       type="{{ enemy.healthBarType }}">{{enemy.stats.health}} / {{ enemy.stats.maxHealth }}</uib-progressbar>
-      <h6 class="text-center">STR : {{ enemy.stats.strength }} &nbsp; | &nbsp; SPD : {{ enemy.stats.speed }}
-        &nbsp; | &nbsp; DEF : {{ enemy.stats.defense }} &nbsp; | &nbsp; INT: {{ enemy.stats.intellect }}</h6>
+<div class="enemies-fight-display">
+  <div class="container">
+    <div class="fight-bar enemies-fight-bar">
+      <div class="card fight-card"
+           ng-style="{width: enemiesFightDisplay.enemiesService.cardWidth}"
+           ng-repeat="enemy in enemiesFightDisplay.enemies"
+           ng-if="enemy.status === 'alive'"
+           ng-class="{'border-pulse' : enemy.id === fight.queuePool[0].id,
+                      'target' : enemiesFightDisplay.enemiesService.targetSelectMode > 0,
+                      'hovered-on-board' : enemy.hovered}"
+           ng-click="enemiesFightDisplay.clickEnemy(enemy)">
+        <h5>{{ enemy.name }}</h5>
+        <uib-progressbar max="enemy.stats.maxHealth"
+                         value="enemy.stats.health"
+                         type="{{ enemy.healthBarType }}">{{enemy.stats.health}} / {{ enemy.stats.maxHealth }}</uib-progressbar>
+        <h6 class="text-center">STR : {{ enemy.stats.strength }} &nbsp; | &nbsp; SPD : {{ enemy.stats.speed }}
+          &nbsp; | &nbsp; DEF : {{ enemy.stats.defense }} &nbsp; | &nbsp; INT: {{ enemy.stats.intellect }}</h6>
+      </div>
     </div>
   </div>
 </div>
