--- a/src/app/components/gameBoard/gameBoard.scss
+++ b/src/app/components/gameBoard/gameBoard.scss
@@ -47,6 +47,11 @@
         }
       }
 
+      &.empty-cell {
+        opacity: .1;
+        pointer-events: none;
+      }
+
       .game-board-contents {
         display: flex;
         align-items: center;
