--- a/src/app/components/mainMenu/mainMenu.html
+++ b/src/app/components/mainMenu/mainMenu.html
@@ -19,8 +19,8 @@
         <button class="btn btn-primary btn-lg btn-block" ng-click="mainMenu.goTo('equipment')">Equipment</button>
         <button class="btn btn-primary btn-lg btn-block" ng-click="mainMenu.goTo('store')">Store</button>
         <button class="btn btn-primary btn-lg btn-block disabled">Skills</button>
-        <button class="btn btn-primary btn-lg btn-block disabled">Arena</button>
-        <button class="btn btn-primary btn-lg btn-block" ng-click="mainMenu.goTo('prefight')">Next</button>
+        <button class="btn btn-primary btn-lg btn-block" ng-click="mainMenu.goTo('prefight', 'arena')">Arena</button>
+        <button class="btn btn-primary btn-lg btn-block" ng-click="mainMenu.goTo('prefight', 'story')">Next</button>
       </div>
     </div>
   </div>
