--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -11,3 +11,5 @@
 <equipment ng-if="main.stateChangeService.playerState === 'equipment'"></equipment>
 <store ng-if="main.stateChangeService.playerState === 'store'"></store>
 
+<help-screen ng-if="main.stateChangeService.playerState === 'help'"></help-screen>
+
