--- a/src/app/components/mainMenu/mainMenu.html
+++ b/src/app/components/mainMenu/mainMenu.html
@@ -18,9 +18,9 @@
       <div class="btn-group-vertical full-width">
         <button class="btn btn-primary btn-lg btn-block" ng-click="mainMenu.goTo('equipment')">Equipment</button>
         <button class="btn btn-primary btn-lg btn-block" ng-click="mainMenu.goTo('store')">Store</button>
-        <button class="btn btn-primary btn-lg btn-block disabled">Skills</button>
+        <button class="btn btn-primary btn-lg btn-block" ng-click="mainMenu.goTo('help')">Help</button>
         <button class="btn btn-primary btn-lg btn-block" ng-click="mainMenu.goTo('prefight', 'arena')">Arena</button>
-        <button class="btn btn-primary btn-lg btn-block" ng-click="mainMenu.goTo('prefight', 'story')">Next</button>
+        <button class="btn btn-primary btn-lg btn-block" ng-click="mainMenu.goTo('prefight', 'story')">Continue Story</button>
       </div>
     </div>
   </div>
