--- a/src/app/components/fightSummary/fightSummary.html
+++ b/src/app/components/fightSummary/fightSummary.html
@@ -70,7 +70,7 @@
   </div>
 
   <div class="text-center">
-    <button class="btn btn-success text-center" ng-click="fightSummary.continue()">Continue</button>
+    <button class="btn btn-success text-center" ng-click="fightSummary.continueFn()">Continue</button>
   </div>
 </div>
 
