--- a/src/app/components/gameBoard/gameBoard.scss
+++ b/src/app/components/gameBoard/gameBoard.scss
@@ -12,6 +12,7 @@
       border: 2px solid $ozTertiary;
       border-radius: 3px;
       margin: 1px;
+      outline: none;
 
       &.movable {
         border-color: $ozMoveable;
