--- a/src/app/components/startScreen/startScreen.html
+++ b/src/app/components/startScreen/startScreen.html
@@ -9,7 +9,7 @@
       <button class="btn btn-primary"
               ng-class="{'disabled' : !startScreen.saveGameRetrieved}"
               ng-click="startScreen.loadGame()">Continue</button>
-      <button class="btn btn-primary">Options</button>
+      <!--<button class="btn btn-primary">Options</button>-->
     </div>
   </div>
 </div>
