--- a/src/app/components/gameBoard/gameBoard.html
+++ b/src/app/components/gameBoard/gameBoard.html
@@ -1,23 +1,21 @@
-<div class="game-board">
-  <div class="container">
-    <div class="row game-board-row" ng-repeat="row in gameBoard.board.layout">
-      <div class="game-board-cell"
-           ng-repeat="cell in row"
-           ng-click="gameBoard.selectCell(cell)"
-           ng-class="{'movable' : cell.movable,
-                      'enemy-targetable' : cell.targetable && cell.targetType === 'Enemy' && !(cell.occupant.id < 200),
-                      'ally-targetable' : cell.targetable && cell.targetType === 'Ally' && !(cell.occupant.id >= 200),
-                      'void-cell': cell.special === 'Void',
-                      'water-cell' : cell.special === 'Water',
-                      'acid-cell' : cell.special === 'Acid',
-                      'fire-cell' : cell.special === 'Fire'}"
-           ng-mouseenter="gameBoard.mouseEnter(cell)"
-           ng-mouseleave="gameBoard.mouseLeave(cell)">
-        <div class="game-board-contents">
-          <div ng-if="cell.occupant">
-            <span ng-if="cell.occupant.icon" ng-class="cell.occupant.icon"></span>
-            <span ng-if="!cell.occupant.icon">{{ cell.occupant.name.substring(0, 1) }}</span>
-          </div>
+<div class="game-board text-center">
+  <div class="game-board-row" ng-repeat="row in gameBoard.board.layout">
+    <div class="game-board-cell"
+         ng-repeat="cell in row"
+         ng-click="gameBoard.selectCell(cell)"
+         ng-class="{'movable' : cell.movable,
+                    'enemy-targetable' : cell.targetable && cell.targetType === 'Enemy' && !(cell.occupant.id < 200),
+                    'ally-targetable' : cell.targetable && cell.targetType === 'Ally' && !(cell.occupant.id >= 200),
+                    'void-cell': cell.special === 'Void',
+                    'water-cell' : cell.special === 'Water',
+                    'acid-cell' : cell.special === 'Acid',
+                    'fire-cell' : cell.special === 'Fire'}"
+         ng-mouseenter="gameBoard.mouseEnter(cell)"
+         ng-mouseleave="gameBoard.mouseLeave(cell)">
+      <div class="game-board-contents">
+        <div ng-if="cell.occupant">
+          <span ng-if="cell.occupant.icon" ng-class="cell.occupant.icon"></span>
+          <span ng-if="!cell.occupant.icon">{{ cell.occupant.name.substring(0, 1) }}</span>
         </div>
       </div>
     </div>
