--- a/src/app/components/helpScreen/helpScreen.html
+++ b/src/app/components/helpScreen/helpScreen.html
@@ -15,6 +15,6 @@
 </div>
 
 <div class="text-center">
-  <button class="btn btn-success"
+  <button class="btn btn-primary"
           ng-click="vm.goBack()">Back</button>
 </div>
