--- a/src/app/components/enemiesFightDisplay/enemiesFightDisplay.scss
+++ b/src/app/components/enemiesFightDisplay/enemiesFightDisplay.scss
@@ -2,4 +2,14 @@
   .hovered-on-board {
     border: 3px solid white;
   }
+
+  .progress {
+    margin-bottom: .5em;
+  }
+
+  .enemy-stats {
+    font-size: 65%;
+    padding: 0;
+    margin: 0;
+  }
 }
